--- a/style.css
+++ b/style.css
@@ -42,4 +42,14 @@
   color: #fff;
 }
 
+.app_footer {
+  height: 40px;
+  background: #000;
+  color: #fff;
+  padding-top: 1rem;
+  font-size: 12px;
+  margin: 0px auto;
+  width: 100%;
+}
+
 /*# sourceMappingURL=style.css.map */
