start building home header section

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -8,3 +8,4 @@
 /** google fonts */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import './components/_all';
+@import './headers/_all';
