--- a/style.css
+++ b/style.css
@@ -52,4 +52,14 @@
   width: 100%;
 }
 
+.Home-content {
+  padding-top: 70px;
+  min-height: 800px;
+  width: 100%;
+  background: url("http://leoknudsen.dev/wp-content/uploads/2017/09/apple-692186_1920.jpg") no-repeat center center;
+  background-size: cover;
+  color: #fff;
+  font-family: 'Open Sans';
+}
+
 /*# sourceMappingURL=style.css.map */
