refactor components and sections file placement + add styling to home section on frontpage

--- a/assets/sass/components/header.scss
+++ b/assets/sass/components/header.scss
@@ -4,13 +4,15 @@
 	margin-left:0px;
 	margin-right:0px;
 	border-bottom: 1px solid #eee;
-	background: #D71F49;
+	background: #000;
 	color: #fff;
+
 	
 	.brand{
 		padding-top: 1.5rem;
 		.navbar-brand{
 			padding-top:-1.5rem;
+			font-family: 'Open Sans';
 		}
 	}
 
