--- a/style.css
+++ b/style.css
@@ -6,13 +6,40 @@
  */
 /** google fonts */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
+.home-content {
+  padding-top: 70px;
+  min-height: 650px;
+  width: 100%;
+  background: url("http://leoknudsen.dev/wp-content/uploads/2017/09/apple-692186_1920.jpg") center center;
+  background-size: cover;
+  color: #fff;
+  font-family: 'Open Sans';
+  padding: 10rem;
+}
+
+.home-content .headline {
+  font-size: 50px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
+}
+
+.home-content .tagline {
+  margin-bottom: 56px;
+  font-size: 40px;
+}
+
+.home-content .contact-me {
+  margin-top: 25rem;
+}
+
 .app_header {
   height: 70px;
   width: 100%;
   margin-left: 0px;
   margin-right: 0px;
   border-bottom: 1px solid #eee;
-  background: #D71F49;
+  background: #000;
   color: #fff;
 }
 
@@ -22,6 +49,7 @@
 
 .app_header .brand .navbar-brand {
   padding-top: -1.5rem;
+  font-family: 'Open Sans';
 }
 
 .app_header .nav-wrapper .menu {
@@ -50,16 +78,6 @@
   font-size: 12px;
   margin: 0px auto;
   width: 100%;
-}
-
-.Home-content {
-  padding-top: 70px;
-  min-height: 800px;
-  width: 100%;
-  background: url("http://leoknudsen.dev/wp-content/uploads/2017/09/apple-692186_1920.jpg") no-repeat center center;
-  background-size: cover;
-  color: #fff;
-  font-family: 'Open Sans';
 }
 
 /*# sourceMappingURL=style.css.map */
