refactoring home header component

--- a/assets/sass/components/header.scss
+++ b/assets/sass/components/header.scss
@@ -3,16 +3,16 @@
 	width: 100%;
 	margin-left:0px;
 	margin-right:0px;
-	border-bottom: 1px solid #eee;
 	background: #000;
 	color: #fff;
+	// display:none;
 
 	
 	.brand{
-		padding-top: 1.5rem;
+		padding-top: 1rem;
 		.navbar-brand{
 			padding-top:-1.5rem;
-			font-family: 'Open Sans';
+			font-family: 'Raleway' sans-serif;
 		}
 	}
 
