--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -6,5 +6,5 @@
  */
 
 /** google fonts */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 @import './components/_all';
