--- a/assets/sass/components/footer.scss
+++ b/assets/sass/components/footer.scss
@@ -1,9 +1,42 @@
 .app_footer{
-	height:40px;
+	min-height:40px;
 	background: #000;
 	color: #fff;
 	padding-top:1rem;
 	font-size:12px;
 	margin: 0px auto;
 	width:100%;
+	// display:none;
+	
+	.social-media{
+		.facebook {
+			color: #3b5998;
+			
+			a{
+				color: #3b5998;
+			}
+		}
+
+		.instagram > a{
+			background: -webkit-linear-gradient(left, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d, #f56040, #f77737, #fcaf45, #ffdc80);
+			  -webkit-background-clip: text;
+			  -webkit-text-fill-color: transparent;
+		}
+
+		.github{
+			color: #f5f5f5;
+			
+			a{
+				color: #f5f5f5;
+			}
+		}
+
+		.twitter {
+			color: #1da1f2;
+			
+			a{
+				color: #1da1f2;
+			}
+		}
+	}
 }
