--- a/assets/sass/components/header.scss
+++ b/assets/sass/components/header.scss
@@ -5,14 +5,13 @@
 	margin-right:0px;
 	background: #000;
 	color: #fff;
-	// display:none;
+	display:none;
 
-	
 	.brand{
 		padding-top: 1rem;
 		.navbar-brand{
 			padding-top:-1.5rem;
-			font-family: 'Raleway' sans-serif;
+			font-family: 'Raleway', sans-serif;
 		}
 	}
 
@@ -27,6 +26,7 @@
 					margin-left: 1rem;
 					a{
 						color:#fff;
+						font-family: 'Raleway', sans-serif;
 					}
 				}
 			}
