--- a/assets/sass/components/headers/home.scss
+++ b/assets/sass/components/headers/home.scss
@@ -1,35 +1,503 @@
+@keyframes see-more-arrow {
+	0%{
+		opacity: 0;
+	}
+	1%{
+		opacity: 0.01;
+		padding-top: 0.1rem;
+	}
+	2%{
+		opacity: 0.02;
+		padding-top: 0.2rem;
+	}
+	3%{
+		opacity: 0.03;
+		padding-top: 0.3rem;
+	}
+	4%{
+		opacity: 0.04;
+		padding-top: 0.4rem;
+	}
+	5%{
+		opacity: 0.05;	
+		padding-top: 0.5rem;
+	}
+	6%{
+		opacity: 0.06;
+		padding-top: 0.6rem;
+	}
+	7%{
+		opacity: 0.07;
+		padding-top: 0.7rem
+	}
+	8%{
+		opacity: 0.08;
+		padding-top: 0.8rem;
+	}
+	9%{
+		opacity: 0.09;
+		padding-top: 0.9rem;
+	}
+	10%{
+		opacity: 0.10;
+		padding-top: 0.10rem;
+	}
+	11%{
+		opacity: 0.11;
+		padding-top: 0.11rem;
+	}
+	12%{
+		opacity: 0.12;
+		padding-top: 0.12rem;
+	}
+	13%{
+		opacity: 0.13;
+		padding-top: 0.13rem;
+	}
+	14%{
+		opacity: 0.14;
+		padding-top: 0.14rem;
+	}
+	15%{
+		opacity: 0.15;
+		padding-top: 0.15rem;
+	}
+	16% {
+		opacity: 0.16;
+		padding-top: 0.16rem;
+	}
+	17%	{
+		opacity: 0.17;
+		padding-top: 0.17rem;
+	}
+	18% {
+		opacity: 0.18;
+		padding-top: 0.18rem;
+	}
+	19% {
+		opacity: 0.19;
+		padding-top: 0.19rem;
+	}
+	20%{
+		opacity: 0.2;
+		padding-top: 0.20rem;
+	}
+	21%{
+		opacity: 0.21;
+		padding-top: 0.21rem;
+	}
+	22%{
+		opacity: 0.22;
+		padding-top: 0.22rem;
+	}
+	23%{
+		opacity: 0.23;
+		padding-top: 0.23rem;
+	}
+	24% {
+		opacity: 0.24;
+		padding-top: 0.24rem;
+	}
+	25%{
+		opacity:0.25;
+		padding-top:0.25rem;
+	}
+	26%{
+		opacity:0.26;
+		padding-top:0.26rem;
+	}
+	27%{
+		opacity:0.27;
+		padding-top:0.27rem;
+	}
+	28%{
+		opacity:0.28;
+		padding-top:0.28rem;
+	}
+
+	29%{
+		opacity:0.29;
+		padding-top:0.29rem;
+	}
+
+	30%{
+		opacity:0.30;
+		padding-top:0.30rem;
+	}
+
+	31%{
+		opacity:0.31;
+		padding-top:0.31rem;
+	}
+
+	32%{
+		opacity:0.32;
+		padding-top:0.32rem;
+	}
+
+	33%{
+		opacity:0.33;
+		padding-top:0.33rem;
+	}
+
+	34%{
+		opacity:0.34;
+		padding-top:0.34rem;
+	}
+
+	35%{
+		opacity:0.35;
+		padding-top:0.35rem;
+	}
+
+	36%{
+		opacity:0.36;
+		padding-top:0.36rem;
+	}
+
+	37%{
+		opacity:0.37;
+		padding-top:0.37rem;
+	}
+
+	38%{
+		opacity:0.38;
+		padding-top:0.38rem;
+	}
+
+	39%{
+		opacity:0.39;
+		padding-top:0.39rem;
+	}
+
+	40%{
+		opacity:0.40;
+		padding-top:0.40rem;
+	}
+	41%{
+		opacity: 0.41;
+		padding: 0.41rem;
+	}
+	42%{
+		opacity: 0.42;
+		padding-top: 0.42rem;
+	}
+	43%{
+		opacity: 0.43;
+		padding-top: 0.43rem;
+	}
+	44%{
+		opacity: 0.44;
+		padding-top: 0.44rem;
+	}
+	45%{
+		opacity: 0.45;
+		padding-top: 0.45rem;
+	}
+	46%{
+		opacity: 0.46;	
+		padding-top: 0.46rem;
+	}
+	47%{
+		opacity: 0.47;
+		padding-top: 0.47rem;
+	}
+	48%{
+		opacity: 0.48;
+		padding-top: 0.48rem
+	}
+	49%{
+		opacity: 0.49;
+		padding-top: 0.49rem;
+	}
+	50%{
+		opacity: 0.50;
+		padding-top: 0.50rem;
+	}
+	51%{
+		opacity: 0.51;
+		padding-top: 0.51rem;
+	}
+	52%{
+		opacity: 0.52;
+		padding-top: 0.52rem;
+	}
+	53%{
+		opacity: 0.53;
+		padding-top: 0.53rem;
+	}
+	54%{
+		opacity: 0.54;
+		padding-top: 0.54rem;
+	}
+	55%{
+		opacity: 0.55;
+		padding-top: 0.55rem;
+	}
+	56%{
+		opacity: 0.56;
+		padding-top: 0.56rem;
+	}
+	57% {
+		opacity: 0.57;
+		padding-top: 0.57rem;
+	}
+	58%	{
+		opacity: 0.58;
+		padding-top: 0.58rem;
+	}
+	59% {
+		opacity: 0.59;
+		padding-top: 0.59rem;
+	}
+	60% {
+		opacity: 0.60;
+		padding-top: 0.60rem;
+	}
+	61%{
+		opacity: 0.61;
+		padding-top: 0.61rem;
+	}
+	62%{
+		opacity: 0.62;
+		padding-top: 0.62rem;
+	}
+	63%{
+		opacity: 0.63;
+		padding-top: 0.63rem;
+	}
+	64%{
+		opacity: 0.64;
+		padding-top: 0.64rem;
+	}
+	65% {
+		opacity: 0.65;
+		padding-top: 0.65rem;
+	}
+	66%{
+		opacity:0.66;
+		padding-top:0.66rem;
+	}
+	67%{
+		opacity:0.67;
+		padding-top:0.67rem;
+	}
+	68%{
+		opacity:0.68;
+		padding-top:0.68rem;
+	}
+	69%{
+		opacity:0.69;
+		padding-top:0.69rem;
+	}
+
+	70%{
+		opacity:0.70;
+		padding-top:0.70rem;
+	}
+
+	71%{
+		opacity:0.71;
+		padding-top:0.71rem;
+	}
+
+	72%{
+		opacity:0.72;
+		padding-top:0.72rem;
+	}
+
+	73%{
+		opacity:0.73;
+		padding-top:0.73rem;
+	}
+
+	74%{
+		opacity:0.74;
+		padding-top:0.74rem;
+	}
+
+	75%{
+		opacity:0.75;
+		padding-top:0.75rem;
+	}
+
+	76%{
+		opacity:0.76;
+		padding-top:0.76rem;
+	}
+
+	77%{
+		opacity:0.77;
+		padding-top:0.77rem;
+	}
+
+	78%{
+		opacity:0.78;
+		padding-top:0.78rem;
+	}
+
+	79%{
+		opacity:0.79;
+		padding-top:0.79rem;
+	}
+
+	80%{
+		opacity:0.80;
+		padding-top:0.80rem;
+	}
+
+	81%{
+		opacity:0.81;
+		padding-top:0.81rem;
+	}
+
+	82%{
+		opacity:0.82;
+		padding-top:0.82rem;
+	}
+
+	83%{
+		opacity:0.83;
+		padding-top:0.83rem;
+	}
+
+	84%{
+		opacity:0.73;
+		padding-top:0.73rem;
+	}
+
+	85%{
+		opacity:0.85;
+		padding-top:0.85rem;
+	}
+
+	86%{
+		opacity:0.86;
+		padding-top:0.86rem;
+	}
+
+	87%{
+		opacity:0.87;
+		padding-top:0.87rem;
+	}
+
+	88%{
+		opacity:0.88;
+		padding-top:0.88rem;
+	}
+
+	89%{
+		opacity:0.89;
+		padding-top:0.89rem;
+	}
+
+	90%{
+		opacity:0.90;
+		padding-top:0.90rem;
+	}
+
+	91%{
+		opacity:0.91;
+		padding-top:0.91rem;
+	}
+
+	92%{
+		opacity:0.92;
+		padding-top:0.92rem;
+	}
+
+	93%{
+		opacity:0.93;
+		padding-top:0.93rem;
+	}
+
+	94%{
+		opacity:0.94;
+		padding-top:0.94rem;
+	}
+
+	95%{
+		opacity:0.95;
+		padding-top:0.95rem;
+	}
+
+	96%{
+		opacity:0.96;
+		padding-top:0.96rem;
+	}
+
+	97%{
+		opacity:0.97;
+		padding-top:0.97rem;
+	}
+
+	98%{
+		opacity:0.98;
+		padding-top:0.98rem;
+	}
+
+	99%{
+		opacity:0.99;
+		padding-top:0.99rem;
+	}
+
+	100%{
+		opacity:0;
+		padding-top:0.100rem;
+	}
+}
+
 .home-content{
-	min-height: 550px;
+	min-height: 650px;
 	width: 100%;
-	background: url('http://leoknudsen.dev/wp-content/uploads/2017/09/apple-692186_1920.jpg') center center;
-	background-size: cover;
+	
 	color: #fff;
-	font-family: 'Raleway';
+	font-family: 'Raleway', sans-serif;
 	margin-left: 0px;
 	
 	.overlay{
-		min-height: 550px;
+		min-height: 650px;
 		background: #16a085;
 		opacity: 0.9;
 		margin-left:-2rem;
+		padding: 0;
+		
+		hr{
+			margin-left:0px;
+			margin-right:0px;
+		}
+		
+		.name{
+			font-size: 35px;
+			padding: 1.5rem;
+			margin-left: 1.5rem;
+			text-transform: uppercase;
+		}
 		
 		.headline, .tagline, .description{
 			margin-bottom: 2.5rem;
 			padding: 1.5rem;
 		}
 
+		.headline{
+			font-size:28px;
+			margin-top:-10px;
+		}
+
 		.contact{
 			bottom:40px;
-			padding: 1.5rem;
-			position: absolute;
+			padding: 3rem;
+			
+			.contact-me{
+				font-weight:800;
+			}
 		}
 	}
 	
 	.headline{
-		font-size: 25px;
+		font-size: 50px;
 		letter-spacing: 0px;
 		margin: 2rem;
-		
 	}
 
 	.tagline{
@@ -37,8 +505,14 @@
 		margin: 2rem;
 	}
 
-	.contact-me{
-		margin-top: 25rem;
+	.see-more{
+		margin-top: 10rem;
+	}
+
+	.see-more-icon > .fa{
+		margin-top:1rem;
+		animation-timing-function: ease-in-out;
+		animation: see-more-arrow 2s infinite;
 	}
 
 	.description{
