refactor content on home section

--- a/assets/sass/components/headers/home.scss
+++ b/assets/sass/components/headers/home.scss
@@ -392,52 +392,52 @@
 	}
 
 	90%{
-		opacity:0.90;
+		opacity:0.80;
 		padding-top:0.90rem;
 	}
 
 	91%{
-		opacity:0.91;
+		opacity:0.70;
 		padding-top:0.91rem;
 	}
 
 	92%{
-		opacity:0.92;
+		opacity:0.60;
 		padding-top:0.92rem;
 	}
 
 	93%{
-		opacity:0.93;
+		opacity:0.50;
 		padding-top:0.93rem;
 	}
 
 	94%{
-		opacity:0.94;
+		opacity:0.40;
 		padding-top:0.94rem;
 	}
 
 	95%{
-		opacity:0.95;
+		opacity:0.30;
 		padding-top:0.95rem;
 	}
 
 	96%{
-		opacity:0.96;
+		opacity:0.20;
 		padding-top:0.96rem;
 	}
 
 	97%{
-		opacity:0.97;
+		opacity:0.10;
 		padding-top:0.97rem;
 	}
 
 	98%{
-		opacity:0.98;
+		opacity:0;
 		padding-top:0.98rem;
 	}
 
 	99%{
-		opacity:0.99;
+		opacity:0;
 		padding-top:0.99rem;
 	}
 
@@ -471,7 +471,7 @@
 			font-size: 35px;
 			padding: 1.5rem;
 			margin-left: 1.5rem;
-			text-transform: uppercase;
+			// text-transform: uppercase;
 		}
 		
 		.headline, .tagline, .description{
