--- a/assets/sass/components/headers/contact.scss
+++ b/assets/sass/components/headers/contact.scss
@@ -2,5 +2,81 @@
 	min-height:650px;
 	width: 100%;
 	padding: 1.5rem;
+	font-family: 'Raleway', sans-serif;
 	
+	.contact-information{
+		padding-top: 1.5rem;
+	}
+
+	.contact-form{
+		padding: 2rem;
+		margin: 0 auto;
+		
+		.wpcf7{
+			.wpcf7-form{
+				p{
+					label{
+						.your-name, .your-email, .your-subject {
+							.wpcf7-form-control{
+								height:30px;
+								border: 1.5px solid #16a085;
+								padding-left: 5px;
+								width: 100%;
+								border-radius: 5px 5px 5px 5px;
+								text-align:center;
+								padding: 2rem;
+								font-size:18px;
+								
+								&:hover{
+									border-color: #3498db;
+									transition:ease-in-out 0.2s all;
+								}
+
+								&:not(:hover) {
+									transition:ease-in-out 0.2s all;
+								}
+							}
+						}
+
+						.your-message{
+							.wpcf7-textarea{
+								padding:2rem;
+								font-size:18px;
+								border-radius: 5px 5px 5px 5px;
+								text-align:center;
+								border: 1.5px solid #16a085;
+								
+								&:hover{
+									border-color: #3498db;
+									transition:ease-in-out 0.2s all;
+								}
+
+								&:not(:hover) {
+									transition:ease-in-out 0.2s all;
+								}
+							}
+						}
+					}
+
+					.wpcf7-submit{
+						width:73%;
+						height:35px;
+						color: #fff;
+						background: #16a085;
+						border:none;
+						border-radius: 5px 5px 5px 5px;
+						
+						&:hover{
+							background: #3498db;
+							transition: ease-in-out 0.2s all;
+						}
+
+						&:not(:hover) {
+							transition: ease-in-out 0.2s all;
+						}
+					}
+				}
+			}
+		}
+	}
 }
