--- a/assets/sass/components/headers/features.scss
+++ b/assets/sass/components/headers/features.scss
@@ -1,19 +1,58 @@
 #features {
 	min-height: 650px;
-	background: #eee;
+	background: #F6F7F9;
 	padding: 5rem;
 	color: #000;
 	font-family: 'Raleway', sans-serif;
 	
 	.feature{
+		margin-top: 1rem;
 		padding: 5rem;
+		border: 1.5px solid #eee;
+		margin-left:0rem;
+		
+		&:hover{
+			.overlay{
+				display:block;
+				transition:ease-in-out 0.2s all;
+			}
+			
+		}
+
+		&:not(:hover) {
+			.overlay {
+				transition:ease-in-out 0.2s all;
+			}
+		}
+		
+		.overlay{
+			height: 100%;
+		    width: 100%;
+		    position: absolute;
+		    background: #16a085;
+		    top: 0px;
+		    left: 0pxpx;
+		    right: 0px;
+		    bottom: 0px;
+		    color: #fff;
+		    padding: 2rem;
+		    opacity: 0.9;
+		    display:none;
+		    
+		}
 		
 		.caption{
+			margin-top: 2rem;
 			font-weight:bold;
+		}
+
+		.description{
+			margin-top: 2rem;
 		}
 		
 		img{
-			border: 3px solid #fff;
+			// border: 3px solid #fff;
+			// border-radius: 0px;
 		}
 	}
 }
