--- a/assets/sass/components/headers/contact.scss
+++ b/assets/sass/components/headers/contact.scss
@@ -12,8 +12,19 @@
 		padding: 2rem;
 		margin: 0 auto;
 		
+		
+		
 		.wpcf7{
 			.wpcf7-form{
+				@media screen and(min-width: 501px) and (max-width: 590px) {
+					margin-left: 15%;
+					margin-right:15px;
+				}
+
+				@media screen and(min-width: 591px) and (max-width: 767px) {
+					margin-left: 15%;
+					mnargin-right: 15%;
+				}
 				p{
 					label{
 						.your-name, .your-email, .your-subject {
@@ -27,7 +38,13 @@
 								padding: 2rem;
 								font-size:18px;
 								
+								@media screen and(min-width: 500px) and (max-width: 991px) {
+									width: 100%;
+								}
+								
 								&:hover{
+									background: #3498db;
+									color: #fff;
 									border-color: #3498db;
 									transition:ease-in-out 0.2s all;
 								}
@@ -47,6 +64,10 @@
 								border: 1.5px solid #16a085;
 								
 								@media screen and(max-width: 400px) {
+									width: 100%;
+								}
+
+								@media screen and(min-width: 768px) and (max-width: 991px) {
 									width: 100%;
 								}
 								
@@ -71,6 +92,17 @@
 						border-radius: 5px 5px 5px 5px;
 						
 						@media screen and(max-width: 400px) {
+							width: 100%;
+						}
+						@media screen and (min-width: 401px) and (max-width: 500px){
+							width: 100%;
+						}
+
+						@media screen and (min-width: 501px) and (max-width: 765px) {
+							width: 100%;
+						}
+
+						@media screen and(min-width: 768px) and (max-width: 991px) {
 							width: 100%;
 						}
 						
