--- a/assets/sass/components/headers/contact.scss
+++ b/assets/sass/components/headers/contact.scss
@@ -6,6 +6,13 @@
 	
 	.contact-information{
 		padding-top: 1.5rem;
+		
+		.email, .phone {
+			&::selection {
+				background: #1abc9c;
+				color: #fff;
+			}
+		}
 	}
  
 	.contact-form{
