--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -8,3 +8,7 @@
 /** google fonts */
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import './components/_all';
+
+::-webkit-scrollbar{
+	display:none;
+}
